Fixed giudici page on mobile

--- a/app/styles/giudici.css
+++ b/app/styles/giudici.css
@@ -18,20 +18,36 @@
     width: 40%;
 }
 
-@media screen and (max-width: 500px){
+@media (max-width: 500px){
+    .flexdiv {
+        display: flex;
+        flex-direction: row;
+        padding-bottom: 25px;
+    }
+    .normal {
+        width: 100%;
+    }
+    .right {
+        width: 100%;
+    }
+    .childdiv {
+        flex:100%;
+        padding-left: 30px;
+        padding-bottom: 30px;
+   }
     #image {
         padding-left: 20px;
-        max-width: 250px;
-        max-height: 175px;
+        max-width: 150px;
+        max-height: 150px;
     }
     #header {
         font-family: Oswald, sans-serif;
-        font-size: 15px;
+        font-size: 9px;
         font-weight: bold;
     }
     #text {
         font-family: Oswald, sans-serif;
-        font-size: 10px;
+        font-size: 6px;
     }
     #title {
         font-family: Oswald, sans-serif;
@@ -60,6 +76,7 @@
     font-family: Oswald, sans-serif;
     font-size: 36px;
     font-weight: bolder;
+    padding-left: 20px;
 }
 
 #header {
